Fix scrollbar

--- a/source/_other.scss
+++ b/source/_other.scss
@@ -2,6 +2,9 @@
 BootSome is licensed under the Apache License 2.0 license
 https://github.com/TRP-Solutions/boot-some/blob/master/LICENSE
 */
+::-webkit-scrollbar {
+	display: none;
+}
 ol, ul, dl {
   margin-bottom: $spacer;
 }
